# dev-sec-ops-pipeline

./: .gitignore  2026학년도 C-리빙랩 프로젝트 참여신청서 .hwpx  LICENSE  fill_report.py  hwp_preview.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: pipelines.py  projects.py
backend/app/core/: config.py  constants.py  exceptions.py
backend/app/db/: base.py  session.py
backend/app/db/models/: cve_catalog.py  pipeline.py  project.py  report.py  vulnerability.py
backend/app/integrations/gemini/: client.py
backend/app/integrations/git/: clone.py
backend/app/integrations/nvd/: client.py
backend/app/integrations/semgrep/: parser.py  runner.py
backend/app/schemas/: pipeline.py  project.py  vulnerability.py
backend/app/services/pipeline/: detectors.py  pipeline_runner.py  pipeline_service.py  step_executor.py
backend/app/services/security/: cve_service.py  semgrep_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_cpe_list_to_cve_catalog.py
backend/scripts/: scan.py
backend/tests/: conftest.py
backend/tests/integration/github/: test_action_contract.py
backend/tests/integration/pipeline/: test_pipelines_api.py
backend/tests/integration/security/: test_cwe_scan_golden.py
backend/tests/unit/api/: test_deps_auth.py
backend/tests/unit/services/: test_cve_service.py  test_pipeline_runner.py  test_security_scan_step_selective.py  test_semgrep_service.py
docs/: phase-0-test-foundation.md  (+9 more)
(+15 files in other folders)
